--- a/index.html
+++ b/index.html
@@ -1,41 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Norway</title>
     <link rel="stylesheet" href="./style/index.css" />
-  </head>
-  <body>
-    <div class="jumbotron">
-      <header>
-        <div class="header__body contentContainer">
-          <div class="header__nav">
-            <a href="/">
-              <img
-                class="header__logo"
-                src="./assets/logo.png"
-                alt="landscape"
-              />
-            </a>
-            <button type="button" class="header__burger">
-              <div class="bar1"></div>
-              <div class="bar2"></div>
-              <div class="bar3"></div>
-            </button>
-          </div>
-          <div class="header__navBar">
-            <a href="#">Itinerary</a>
-            <a href="#">Testimonials</a>
-            <a href="#">Itinerary</a>
-            <a href="#">Blog</a>
-            <a href="#">Contacts</a>
-            <a href="#">Join Us &rarr;</a>
-          </div>
+</head>
+
+<body>
+    <section class="jumbotron">
+        <header>
+            <div class="header__body contentContainer">
+                <div class="header__nav">
+                    <a href="/">
+                        <img class="header__logo" src="./assets/logo.png" alt="landscape" />
+                    </a>
+                    <button type="button" class="header__burger">
+                        <div class="bar1"></div>
+                        <div class="bar2"></div>
+                        <div class="bar3"></div>
+                    </button>
+                </div>
+                <div class="header__navBar">
+                    <a href="#about-us">About us</a>
+                    <a href="#">Testimonials</a>
+                    <a href="#">Itinerary</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Contacts</a>
+                    <a href="#">Join Us &rarr;</a>
+                </div>
+            </div>
+        </header>
+        <div class="jumbotron-content contentContainer">
+            <div class="headlines-container">
+                <h1>Norway</h1>
+                <h2><span class="dash-red">━</span> Your perfect journey to</h2>
+            </div>
+            <div class="description">
+                <div class="link-to-video">
+                    <img src="assets/promo_play_icon.svg" alt="icon" /> -
+                    <a href="#promo">Watch the promo video!</a>
+                </div>
+                <div class="info-next-trip">
+                    <img src="assets/picvideo.jpg" alt="video">
+                    <h3>Next Trip to Norway</h3>
+                    <p>$2300 | 17 march-22 march</p>
+                    <p>10 days of travel and 5 unique places in Norway are waiting for us ...</p>
+                    <a href="#places">Read more &rarr;</a>
+                </div>
+            </div>
         </div>
-      </header>
-    </div>
+    </section>
+    <section class="about-content contentContainer" id="about-us">
+        <h2><span class="dash-red">-</span> About us</h2>
+        <br>
+        <div class="tour-content">
+            <p class="thumbnail">Expertly crafted tours to Norway.<span> 10 days</span> of admiring nordic cities.
+                fjords, and waterfalls.
+            </p>
+            <br>
+            <div class="right-half">
+                <p>We offer guided tours in Norway - one of the most beautiful Nordic countries. We will cross the
+                    entire
+                    country, from Oslo to Tromsø, visit amazing cities, and see stunning nature.</p>
+                <br>
+                <p>The program is carefully thought out, there are no more than 10 people in each group plus an
+                    English-speaking guide. Comfortable vans and nights in 3*+ hotels are included in the price.</p>
+            </div>
+        </div>
+    </section>
+    <section class="phases">
+        <div class="blocks-container contentContainer">
+            <div class="phase-block">
+                <img src="./assets/01.png" alt="01">
+                <h3>Contacts us</h3>
+                <p>Some tour conditions may be changed according to the season. To learn more about the program, please
+                    contact us</p>
+            </div>
+            <div class="phase-block">
+                <img src="./assets/02.png" alt="02">
+                <h3>Pick a date</h3>
+                <p>We conduct tours all year round, almost every week, but the most comfortable weather for sightseeing
+                    is in summer.</p>
+            </div>
+            <div class="phase-block">
+                <img src="./assets/03.png" alt="03">
+                <h3>Start your journey</h3>
+                <p>If necessary, we help you apply for a visa to Norway, as well as advise what things you should take
+                    with you.</p>
+            </div>
+        </div>
+    </section>
+    <section class="content-tour">
+        <div class="bg-content-tour">
+            <div class="tour-itinerary-conteiner contentContainer">
+                <div class="map-tour">
+                    <img src="./assets/map.png" alt="map tour">
+                </div>
+                <div class="info-tour">
+                    <div class="content-oslo-tromso">
+                        <h2><span class="dash-red">-</span> Tour Itirinarary</h2>
+                        <p>From Oslo to Tromsø</p>
+                        <p>We will travel through almost the entire country, from Oslo to Tromsø. Many amazing places
+                            await us, including bustling cities and fishing villages. You will see the real Norway in
+                            all its glory.</p>
+                    </div>
+                    <div class="route-three">
+                        <img src="./assets/license.svg" alt="icon license">
+                        <h4>Official License</h4>
+                        <p>We are a licensed tour operator and have all the necessary permits to conduct tours in
+                            Norway.</p>
+                    </div>
+                    <div class="route-three">
+                        <img src="./assets/direction-sign .svg" alt="icon guide">
+                        <h4>Professional Guide</h4>
+                        <p>A professional guide will accompany you along the entire route, who will show you the most
+                            beautiful places.</p>
+                    </div>
+                    <div class="route-three">
+                        <img src="./assets/satisfaction.svg" alt="icon satisfaction">
+                        <h4>110% Satisfaction</h4>
+                        <p>Norway will steal your heart from the very first day of our trip. It is impossible not to
+                            fall in love with it!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script type="module" src="./scripts/main.js"></script>
-  </body>
+</body>
+
 </html>
