--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
                 </div>
                 <div class="header__navBar">
                     <a href="#about-us">About us</a>
-                    <a href="#">Testimonials</a>
-                    <a href="#">Itinerary</a>
-                    <a href="#">Blog</a>
-                    <a href="#">Contacts</a>
-                    <a href="#">Join Us &rarr;</a>
+                    <a href="#iterary">Itinerary</a>
+                    <a href="#places">Places</a>
+                    <a href="#contact-us">Contacts</a>
+                    <a href="#contact-us">Join Us &rarr;</a>
                 </div>
             </div>
         </header>
@@ -41,7 +40,7 @@
             <div class="description">
                 <div class="link-to-video">
                     <img src="assets/promo_play_icon.svg" alt="icon" /> -
-                    <a href="#promo">Watch the promo video!</a>
+                    <a href="https://www.youtube.com/watch?v=0Dd155J3-Js">Watch the promo video!</a>
                 </div>
                 <div class="info-next-trip">
                     <img src="assets/picvideo.jpg" alt="video">
@@ -93,7 +92,7 @@
             </div>
         </div>
     </section>
-    <section class="content-tour">
+    <section class="content-tour" id="iterary">
         <div class="bg-content-tour">
             <div class="tour-itinerary-conteiner contentContainer">
                 <div class="map-tour">
@@ -102,33 +101,153 @@
                 <div class="info-tour">
                     <div class="content-oslo-tromso">
                         <h2><span class="dash-red">-</span> Tour Itirinarary</h2>
-                        <p>From Oslo to Tromsø</p>
-                        <p>We will travel through almost the entire country, from Oslo to Tromsø. Many amazing places
-                            await us, including bustling cities and fishing villages. You will see the real Norway in
-                            all its glory.</p>
+                        <h3><span>From Oslo</span> to Tromsø</<h3>
+                            <p>We will travel through almost the entire country, from Oslo to Tromsø. Many amazing
+                                places
+                                await us, including bustling cities and fishing villages. You will see the real Norway
+                                in
+                                all its glory.</p>
                     </div>
                     <div class="route-three">
-                        <img src="./assets/license.svg" alt="icon license">
-                        <h4>Official License</h4>
-                        <p>We are a licensed tour operator and have all the necessary permits to conduct tours in
-                            Norway.</p>
+                        <div class="route-icon-bg">
+                            <img src="./assets/license.svg" alt="icon license">
+                        </div>
+                        <div class="condition-text">
+                            <h4>Official License</h4>
+                            <p>We are a licensed tour operator and have all the necessary permits to conduct tours in
+                                Norway.</p>
+                        </div>
                     </div>
                     <div class="route-three">
-                        <img src="./assets/direction-sign .svg" alt="icon guide">
-                        <h4>Professional Guide</h4>
-                        <p>A professional guide will accompany you along the entire route, who will show you the most
-                            beautiful places.</p>
+                        <div class="route-icon-bg">
+                            <img src="./assets/direction-sign .svg" alt="icon guide">
+                        </div>
+                        <div class="condition-text">
+                            <h4>Professional Guide</h4>
+                            <p>A professional guide will accompany you along the entire route, who will show you the
+                                most
+                                beautiful places.</p>
+                        </div>
                     </div>
                     <div class="route-three">
-                        <img src="./assets/satisfaction.svg" alt="icon satisfaction">
-                        <h4>110% Satisfaction</h4>
-                        <p>Norway will steal your heart from the very first day of our trip. It is impossible not to
-                            fall in love with it!</p>
+                        <div class="route-icon-bg">
+                            <img src="./assets/satisfaction.svg" alt="icon satisfaction">
+                        </div>
+                        <div class="condition-text">
+                            <h4>110% Satisfaction</h4>
+                            <p>Norway will steal your heart from the very first day of our trip. It is impossible not to
+                                fall in love with it!</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <section class="towns contentContainer" id="places">
+        <ul class="towns-tabs">
+            <li class="active"><a href="#tab-1">Oslo</a></li>
+            <li class=""><a href="#tab-2">Trondheim</a></li>
+            <li class=""><a href="#tab-3">Bodø</a></li>
+        </ul>
+        <div class="tab-content">
+            <div id="tab-1" class="tab-pane active">
+                <div class="tab-foto">
+                    <img src="./assets/tab-1.jpg" alt="Oslo">
+                </div>
+                <div class="tab-container">
+                    <h3>The Capital and Largest City of Norway</h3>
+                    <span>1 night</span>
+                    <p>Scandic Hotel</p>
+                    <p>We start our journey from Oslo, the capital of Norway. On a walking tour, you will see the opera
+                        house, parliament, the royal palace, and more.</p>
+                </div>
+            </div>
+            <div id="tab-2" class="tab-pane">
+                <div class="tab-foto">
+                    <img src="./assets/tab-2.jpg" alt="Trondheim">
+                </div>
+                <div class="tab-container">
+                    <h3>The First Capital With the Royal Residence</h3>
+                    <span>2 night</span>
+                    <p>Radisson Hotel</p>
+                    <p>The main Christian landmark of Norway, the Nidaros Cathedral is located here. The architectural
+                        sign of the new era is a high TV tower with a revolving restaurant.</p>
+                </div>
+            </div>
+            <div id="tab-3" class="tab-pane">
+                <div class="tab-foto">
+                    <img src="./assets/tab-3.jpg" alt="Bodø">
+                </div>
+                <div class="tab-container">
+                    <h3>Unique Fishing Spot in Fascinating Scenery</h3>
+                    <span>2 night</span>
+                    <p>Gronheim Guesthouse</p>
+                    <p>We've left "urban" Norway, and Bodø is our first stop for no sightseeing. We will simply go
+                        fishing, enjoy the fresh air, and try dishes with salmon and trout.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    </section>
+    <section class="content-contact" id="contact-us">
+        <div class="conteiners-contacts contentContainer">
+            <div class="filled">
+                <div class="conteiners-contacts-block">
+                    <h2><span class="dash-red">-</span> Contact us</h2>
+                    <<h3>Book your journey!</h3>
+                        <p>Complete the form below, and we will contact you soon to discuss the details!</p>
+                </div>
+                <div class="contact_fields">
+                    <form id="form" class="form" action="#" method="POST">
+                        <label class="form-item">
+                            <input type="text" name="name" placeholder="Your Name" required>
+                        </label>
+                        <br>
+                        <label class="form-item">
+                            <input type="email" name="email" placeholder="Your Email" required>
+                        </label>
+                        <br>
+                        <label class="form-item">
+                            <input type="number" name="phone" placeholder="Yuor Phone" required>
+                        </label>
+                        <br>
+                        <label class="form-item">
+                            <input type="date" name="date" required>
+                        </label>
+                        <br>
+                        <button type="submit" class="btn-form-contact">Request a quote</button>
+                    </form>
+                </div>
+            </div>
+            <div class="empty"> </div>
+        </div>
+    </section>
+    <footer>
+        <div class="contentContainer">
+            <div class="logo-footer">
+                <img id="logo" src="./assets/logo.png" alt="logo Norway">
+            </div>
+            <div class="navigation-bar">
+                <a href="#about-us">About us</a>
+                <a href="#">Testimonials</a>
+                <a href="#">Itinerary</a>
+                <a href="#">Contacts</a>
+            </div>
+            <div class="footer-info-socnet">
+                <p>&#169 Created by Myroslav Dmukhivskyi</p>
+                <div class="face-inst-you">
+                    <div class="icons-size"><a href="https://www.facebook.com"><img src="./assets/footer_facebook.svg"
+                                alt="facebook"></a></div>
+                    <div class="icons-size"><a href="https://www.instagram.com"><img src="./assets/footer_instagram.svg"
+                                alt="instagram"></a></div>
+                    <div class="icons-size"><a href="https://www.youtube.com"><img src="./assets/footer_youtube.svg"
+                                alt="youtube"></a></div>
+                </div>
+                <p>All rights Reserved</p>
+            </div>
+        </div>
+    </footer>
     <script type="module" src="./scripts/main.js"></script>
 </body>
 
