--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         </label>
                         <br>
                         <label class="form-item">
-                            <input type="number" name="phone" placeholder="Yuor Phone" required>
+                            <input type="number" name="phone" placeholder="Your Phone" required>
                         </label>
                         <br>
                         <label class="form-item">
